Fixed some bugs realted to overlapping, not enough block to place ships

--- a/src/styles/shipPlacement.css
+++ b/src/styles/shipPlacement.css
@@ -35,4 +35,9 @@
 }
 .grid-not-valid {
     background: red;
+    cursor: not-allowed;
+}
+.ship-placed-on-grid {
+    background: green;
+    cursor: not-allowed;
 }
